--- a/market/login_view_account.html
+++ b/market/login_view_account.html
@@ -34,8 +34,9 @@
             document.getElementById("user_entered_account_numberErrorMessage").innerHTML = "<p class=\"validation_message\">New or invalid BLX account.  New BLX accounts must first make an outgoing transaction from the Blue0x wallet.</p>";
             } else {
             // Store the account number and balance
+            var balance = result.balanceNQT / 100000000;
             sessionStorage.setItem("accountRS", result.accountRS);
-            sessionStorage.setItem("accountBalance", result.effectiveBalanceNXT);
+            sessionStorage.setItem("accountBalance", balance);
             var replace_loginResult = '';
             replace_loginResult += '<div class="media-body">';
             replace_loginResult += '<p>You have logged in with the following account:</p>';
@@ -44,7 +45,7 @@
             replace_loginResult += '</div>';
             replace_loginResult += '<div class="media-body">';
             replace_loginResult += '<a class="p-head">BLX Balance</a>';
-            replace_loginResult += '<p>' + result.effectiveBalanceNXT + ' BLX </p>';
+            replace_loginResult += '<p>' + balance + ' BLX </p>';
             replace_loginResult += '</div>';
             document.getElementById("loginResult").innerHTML = replace_loginResult;
           }
@@ -55,7 +56,7 @@
         currency: Constants.USDXId
       },
       function(coinquery) {
-        if (coinquery.length == 0) {
+        if (coinquery == '{}') {
             sessionStorage.setItem("USDXAccountBalance", "0 USDX");
             var replace_USDXAccountBalance = '';
             replace_USDXAccountBalance += '<div class="media-body">';
@@ -63,7 +64,7 @@
             replace_USDXAccountBalance += '<p>0 USDX</p>';
             replace_USDXAccountBalance += '</div>';
             replace_USDXAccountBalance += '</br>';
-            replace_USDXAccountBalance += '<a class="btn btn-default" href="ViewAll.html" role="button">View Items</a>&nbsp;&nbsp;<a class="btn btn-default" href="ListNewItem.html" role="button">List New Item</a>';
+            replace_USDXAccountBalance += '<a class="btn btn-default" href="ViewAll.html" role="button">View Items</a>&nbsp;&nbsp;<a class="btn btn-default" href="account_details.html" role="button">My Account</a>';
             document.getElementById("USDXAccountBalance").innerHTML = replace_USDXAccountBalance;
           } else {
             var USDXAccountBalance = coinquery.units;
@@ -75,11 +76,10 @@
             replace_USDXAccountBalance += '<p>' + convertedUSDXAccountBalance + ' USDX</p>';
             replace_USDXAccountBalance += '</div>';
             replace_USDXAccountBalance += '</br>';
-            replace_USDXAccountBalance += '<a class="btn btn-default" href="ViewAll.html" role="button">View Items</a>&nbsp;&nbsp;<a class="btn btn-default" href="ListNewItem.html" role="button">List New Item</a>';
+            replace_USDXAccountBalance += '<a class="btn btn-default" href="ViewAll.html" role="button">View Items</a>&nbsp;&nbsp;<a class="btn btn-default" href="account_details.html" role="button">My Account</a>';
             document.getElementById("USDXAccountBalance").innerHTML = replace_USDXAccountBalance;
           }
-        }, "json");
-    }};
+        }, "json");}};
 </script>
   <script>
   function loadAccountInfo() {
