--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<i class="icon-remove menu-close"></i>
 			<a href="./market/index_login.html" class="smoothScroll">View My Account</a>
 			<a href="https://learn.blue0x.com" class="smoothScroll">Learn More</a>
-			<a href="#home" class="smoothScroll">Need a Wallet?</a>
+			<a href="https://learn.blue0x.com/setup/vps/" class="smoothScroll">Need a Wallet?</a>
 			<a href="https://twitter.com/Blue0x_com"><i class="fab fa-twitter"></i></a>
 			<a href="https://discord.gg/8db6CRqM4H"><i class="fab fa-discord"></i></a>
 			<a href="https://github.com/theBlue0x"><i class="fab fa-github"></i></a>
